--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap-grid.min.css" integrity="sha512-i1b/nzkVo97VN5WbEtaPebBG8REvjWeqNclJ6AItj7msdVcaveKrlIIByDpvjk5nwHjXkIqGZscVxOrTb9tsMA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/js/bootstrap.min.js" integrity="sha512-ykZ1QQr0Jy/4ZkvKuqWn4iF3lqPZyij9iRv6sGqLRdTPkY69YX6+7wvVGmsdBbiIfN/8OdsI7HABjvEok6ZopQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     </head>
     <body>
 
@@ -12,7 +11,33 @@
         <footer class="bg-dark text-white text-center pt-4 pb-1">
             <div class="container">
                 <div class="row">
-                    
+                    <!-- Socials Section-->
+                     <div class="col py-3">
+                        <h5>Follow Us</h5>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Facebook</a></li>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Instagram</a></li>
+                            <li><a href="#">LinkedIn</a></li>
+                        </ul>
+                     </div>
+                     <!-- Contact Us Section-->
+                      <div class="col border-start border-black py-3">
+                            <h5>Contact Us</h5>
+                            <p>
+                                <a href="tel:+15555555555">555-555-5555</a>
+                                <a href="mailto:user@example.com">Email</a>
+                            </p>
+                      </div>
+                      <!-- Additional Links Section -->
+                       <div class="col border-start border-black py-3">
+                        <h5>Additional Links</h5>
+                            <p>
+                                <a href="#">Privacy Policy</a>
+                                <a href="#">Terms of Service</a>
+                                <a href="#">FAQ</a>
+                            </p>
+                       </div>
                 </div>
             </div>
         </footer>
