--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/lib.min.js" integrity="sha512-iZkSskGK6ztK3mG293FyahxuEzQjj/qpKBnvMCoXD42sBLOd3ljqCt4nZWbS2YYAEQiNMex832AhAU4nFILWoQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     </head>
-    <body>
+     <!-- First line of Tailwind CSS using utility classes -->
+    <body class="bg-gray-100 text-gray-100">
 
+       <!-- Navigation bar-->
+        <nav class="container mx-auto flex justify-between items-center">
+            <h1 class="text-2xl font-bold">My Website</h1>
+            <!-- space along x-axis times 4 for all the child elements-->
+            <ul class="flex space-x-4">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <!-- Hero Section -->
+         <section class="text-center py-60 bg-gray-200">
+
+
+         </section>
+         
         <!-- Footer section made with Bootstrap -->
         <footer class="bg-dark text-white text-center pt-4 pb-1">
             <div class="container">
@@ -22,7 +41,7 @@
                         </ul>
                      </div>
                      <!-- Contact Us Section-->
-                      <div class="col border-start border-black py-3">
+                      <div class="col text-center border-start border-black py-3">
                             <h5>Contact Us</h5>
                             <p>
                                 <a href="tel:+15555555555">555-555-5555</a>
@@ -30,7 +49,7 @@
                             </p>
                       </div>
                       <!-- Additional Links Section -->
-                       <div class="col border-start border-black py-3">
+                       <div class="col text-center border-start border-black py-3">
                         <h5>Additional Links</h5>
                             <p>
                                 <a href="#">Privacy Policy</a>
