--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
         <!-- Hero Section -->
          <section class="text-center py-60 bg-gray-200">
-
-
+            <h1 class="text-4xl font-bold text-gray-800">Welcome to my Website</h1>
+            <p class="mt-4 text-lg text-gray-600"> This was built using TailwindCSS</p>
+            <button class="mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
+                Get Started
+            </button>
          </section>
          
         <!-- Footer section made with Bootstrap -->
