--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+
+        <style>
+            #hero{
+                background-image: url('https://www.travelandleisure.com/thmb/kkunanwydHnsdaIIUb_I62gufSk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/victoria-falls-zambia-zimbabwe-WATERFALLS1021-253648b330744754a59a5d7721572c97.jpg');
+            }
+        </style>
+
     </head>
      <!-- First line of Tailwind CSS using utility classes -->
     <body class="bg-gray-100 text-gray-100">
@@ -21,7 +28,7 @@
         </nav>
 
         <!-- Hero Section -->
-         <section class="text-center py-60 bg-gray-200">
+         <section id="hero" class="text-center py-60 bg-gray-200">
             <h1 class="text-4xl font-bold text-gray-800">Welcome to my Website</h1>
             <p class="mt-4 text-lg text-gray-600"> This was built using TailwindCSS</p>
             <button class="mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
