--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
         <style>
             #hero{
                 background-image: url('https://www.travelandleisure.com/thmb/kkunanwydHnsdaIIUb_I62gufSk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/victoria-falls-zambia-zimbabwe-WATERFALLS1021-253648b330744754a59a5d7721572c97.jpg');
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: 0 -100px;
             }
         </style>
 
