--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
                 background-size: cover;
                 background-position: 0 -100px;
             }
+            #backplate{
+                background: lightgrey;
+                padding: 10px;
+                opacity: .8;
+                box-shadow: 2px 2px 5px white;
+            }
         </style>
 
     </head>
@@ -32,11 +38,13 @@
 
         <!-- Hero Section -->
          <section id="hero" class="text-center py-60 bg-gray-200">
-            <h1 class="text-4xl font-bold text-gray-800">Welcome to my Website</h1>
-            <p class="mt-4 text-lg text-gray-600"> This was built using TailwindCSS</p>
-            <button class="mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
-                Get Started
-            </button>
+            <div id="backplate">
+                <h1 class="text-4xl font-bold text-gray-800">Welcome to my Website</h1>
+                <p class="mt-4 text-lg text-gray-600"> This was built using TailwindCSS</p>
+                <button class="mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg hover:bg-blue-700">
+                    Get Started
+                </button>
+            </div>
          </section>
          
         <!-- Footer section made with Bootstrap -->
