--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
         <style>
             #hero{
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 background-image: url('https://www.travelandleisure.com/thmb/kkunanwydHnsdaIIUb_I62gufSk=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/victoria-falls-zambia-zimbabwe-WATERFALLS1021-253648b330744754a59a5d7721572c97.jpg');
                 background-repeat: no-repeat;
                 background-size: cover;
@@ -15,9 +18,11 @@
             }
             #backplate{
                 background: lightgrey;
-                padding: 10px;
+                width: fit-content;
+                padding: 50px;
                 opacity: .8;
                 box-shadow: 2px 2px 5px white;
+                border-radius: 15px;
             }
         </style>
 
