--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             }
             #backplate{
                 background: lightgrey;
-                width: fit-content;
-                padding: 50px;
+                width: 100%;
+                padding: 10px 50px;
                 opacity: .8;
                 box-shadow: 2px 2px 5px white;
-                border-radius: 15px;
             }
         </style>
 
