--- a/index.html
+++ b/index.html
@@ -33,10 +33,27 @@
         <nav class="container mx-auto flex justify-between items-center">
             <h1 class="text-2xl font-bold">My Website</h1>
             <!-- space along x-axis times 4 for all the child elements-->
-            <ul class="flex space-x-4">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+            <ul class="nav nav-pills">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+
+                 <!--Dropdown Menu-->
+                <li class="nav-item dropdown">
+             
+                    <ul class="dropdown-menu">
+                        <a href="">More<span class="caret"></span></a>
+
+                    </ul>
+
+                </li>
+
             </ul>
         </nav>
 
