--- a/index.html
+++ b/index.html
@@ -46,14 +46,20 @@
 
                  <!--Dropdown Menu-->
                 <li class="nav-item dropdown">
-             
-                    <ul class="dropdown-menu">
-                        <a href="">More<span class="caret"></span></a>
-
+                    <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"">More
+                        <span class="caret"></span></a>
+                     <ul class="dropdown-menu">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Nav Item 1</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="#">Nav Item 2</a>
+                        </li>
+                         <li class="nav-item">
+                            <a class="nav-link" href="#">Nav Item 3</a>
+                        </li>  
                     </ul>
-
                 </li>
-
             </ul>
         </nav>
 
